[package]
name = "rust_tank_v2"
version = "0.1.0"
authors = ["TheDestroyer19 <TheDestroyer19@github.com>"]

[dependencies]
mpu6050 = { path = "../mpu6050" }
pca9685 = { path = "../pca9685" }
termion = "1.5.1"
floating-duration = "0.1.2"
i2cdev = "0.4.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"